Add spinner icon to loading screens.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -78,6 +78,13 @@ $positive: #ed2654 !default;
 }
 
 
+
+.loading {
+    background: white !important; 
+    color: #444 !important;
+}
+
+
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
