--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -15,6 +15,18 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+.tabs {
+  height: 60px !important; }
+  .tabs .tab-item {
+    padding-top: 5px !important; }
+
+.bar {
+  box-shadow: 0 2px 2px 0 rgba(33, 33, 33, 0.1) !important;
+  height: 55px !important; }
+
+.tab-item-feat {
+  background: #cf113d; }
+
 .angular-leaflet-map {
   height: 100%; }
 
@@ -57,6 +69,9 @@ $dark:                            #444 !default;
 .loading {
   background: white !important;
   color: #444 !important; }
+
+.tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
+  border-bottom: 3px solid white !important; }
 
 /*!
   Ionicons, v2.0.1
