Add collection of demands and new actions (like/comment/see more). WIP for new demand screen.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,18 +21,18 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 $positive: #ed2654 !default;
 
-.tabs {
-  height: 60px !important;
-  .tab-item {
-    padding-top: 5px !important;
-  }
-
-}
+//.tabs {
+//  height: 60px !important;
+//  .tab-item {
+//    padding-top: 5px !important;
+//  }
+//
+//}
 
 
 .bar {
   box-shadow: 0 2px 2px 0 rgba(33, 33, 33, .1) !important;
-  height: 55px !important;
+  //height: 55px !important;
 }
 
 .tab-item-feat {
