--- a/www/templates/demands.html
+++ b/www/templates/demands.html
@@ -1,7 +1,45 @@
 <ion-view view-title="Demandas recentes">
-
   <ion-content>
+    <ion-list>
+    <div class="list card" ng-repeat="demand in demands">
 
+      <div class="item item-avatar">
+        <img ng-src="{{ demand.user.avatar }}">
+        <h2>{{ demand.user.first_name }}</h2>
+        <p>quer {{ demand.category.name }} em {{ demand.pins[0].fullname }}</p>
+      </div>
+
+      <div class="item item-body">
+        <!--<img class="full-image" src="delorean.jpg">-->
+        <p ng-hide="demand.fullname == ''"> {{ demand.fullname }} </p>
+        <p>
+        <a href="#" class="subdued">0 Like</a>
+        <a href="#" class="subdued">0 Comments</a>
+        </p>
+      </div>
+
+      <div class="item tabs tabs-secondary tabs-icon-left">
+        <a class="tab-item" href="#">
+          <i class="icon ion-android-favorite-outline"></i>
+          Apoiar 
+        </a>
+        <a class="tab-item" href="#">
+          <i class="icon ion-ios-chatboxes-outline"></i>
+          Comentar
+        </a>
+      </div>
+    </div>
+    </ion-list>
+
+
+    <ion-infinite-scroll
+      on-infinite="getNewDemands()"
+      distance="1%"
+      immediate-check="false">
+    </ion-infinite-scroll>
   </ion-content>
 
 </ion-view>
+
+
+
