--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,8 +18,8 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-
-$positive: #ed2654 !default;
+$energized: #ed2654 !default;
+$positive: #f9f9f9 !default;
 
 //.tabs {
 //  height: 60px !important;
@@ -28,16 +28,23 @@ $positive: #ed2654 !default;
 //  }
 //
 //}
+.icon { color: #333 !important; margin-top: .2em !important } 
+.tab-item { color: #444 !important; }
+.scroll-content { background: #eee !important; }
+.tabs { height: 60px !important; }
 
 
 .bar {
-  box-shadow: 0 2px 2px 0 rgba(33, 33, 33, .1) !important;
+  box-shadow: none !important;
   //height: 55px !important;
 }
 
 .tab-item-feat {
   background: darken($positive, 10%);
 }
+
+.bar-head { height: 60px !important; } 
+.title { line-height: 3.2em !important; }
 .bar-positive { 
   //padding: 1.6em 0 !important;
 }
@@ -106,6 +113,9 @@ $positive: #ed2654 !default;
     border-bottom: 3px solid white !important;
 }
 
+.list { margin-top: 1.5em }
+.card { margin-bottom: 1em !important; border: 1px solid #ddd; box-shadow: 0 1px 2px #eee !important; }
+.item-body { padding-top: 0 !important; }
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
